fixed overflow dashboard home

--- a/src/app/features/dashboard/pages/home/home.component.scss
+++ b/src/app/features/dashboard/pages/home/home.component.scss
@@ -31,7 +31,7 @@
 
 .upper-container {
   display: flex;
-  margin-top: 3rem;
+  margin-top: 1rem;
   justify-content: space-between;
   gap: 1rem;
   flex: 55%;
@@ -235,7 +235,6 @@
 
 .lower-container {
   display: flex;
-  margin-bottom: 3rem;
   justify-content: space-between;
   gap: 1rem;
   flex: 45%;
